[fix]: bio_info gap

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -88,7 +88,7 @@
     margin-top: 5rem !important;
   }
 
-  .bio_info > div:not(:first-child):not(:last-child){
+  .bio_info > div:not(:first-child):not(:last-child) {
     border-top: 1px solid;
     padding-top: 0.5rem;
   }
@@ -158,7 +158,7 @@
     max-width: 100%;
     max-height: 100%;
   }
-  .scroll-button{
+  .scroll-button {
     width: 25px;
     font-size: 18px;
   }
@@ -217,25 +217,24 @@
   }
 
   .bio_info {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 3rem;
     width: 100%;
     overflow: hidden;
-    top: 0;
-    left: 0;
-    height: calc(100vh - 7rem);
-    max-height: calc(100vh - 7rem);
+    /* top: 0;
+    left: 0; */
+    height: calc(100vh - 10rem);
+    max-height: calc(100vh - 10rem);
     margin-top: 5rem !important;
   }
 
-  .bio_info > div:not(:first-child):not(:last-child){
+  .bio_info > div:not(:first-child):not(:last-child) {
     border-top: 1px solid;
     padding-top: 0.5rem;
   }
-  /* .bio_info > div:not(:last-child) {
+  /* .bio_info > div {
     margin-bottom: 0.5rem;
-    padding-bottom: 5.3rem !important;
+    padding-bottom: 3.3rem !important;
     overflow: hidden;
     border-bottom: 1px solid;
   }
@@ -300,7 +299,7 @@
     object-fit: cover;
   }
 
-  .scroll-button{
+  .scroll-button {
     width: 25px;
     font-size: 18px;
   }
@@ -319,21 +318,22 @@
 
 @media (max-width: 399px) {
   .bio_info {
-    overflow: auto !important;
+    overflow: hidden !important;
+    gap: 1.5rem !important;
   }
 
-  .bio_info > div {
+  /* .bio_info > div {
     margin-bottom: 0.5rem;
     padding-bottom: 1.8rem;
-  }
+  } */
 }
 @media (max-width: 365px) {
   html {
     font-size: 55% !important;
   }
 
-  .title-info{
-    min-width:initial;
+  .title-info {
+    min-width: initial;
   }
   /* .project-year {
     flex: 0.5;
